@startuml

abstract WarningTimerBase{
    +Add()
    +Remove()
}

class WarningTimer{
    +Notify()
}

class WarningTimerMock{
}

interface Observer{
    +Update()
}

class MainForm{
    +Update()
}

class SubForm{
    +Update()
}

Observer <|.. MainForm
Observer <|.. SubForm
WarningTimerBase o-- Observer
WarningTimerBase <|-- WarningTimer
WarningTimerBase <|-- WarningTimerMock

@enduml